# Calculator_C-

./: UserGuide.md
src/Calculator.Core/: CMakeLists.txt  CalculatorCore.cpp  CalculatorCore.h
src/Calculator.UI/: App.axaml  App.axaml.cs  Calculator.UI.csproj  NativeMethods.cs  Program.cs  ViewLocator.cs  app.manifest
src/Calculator.UI/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
src/Calculator.UI/Views/: MainWindow.axaml  MainWindow.axaml.cs
